--- a/ordermanagement/src/main/resources/application.properties
+++ b/ordermanagement/src/main/resources/application.properties
@@ -11,3 +11,11 @@ logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - 
 
 #output to a temp_folder/file
 logging.file=${java.io.tmpdir}/application.log
+
+#management.endpoints.web.exposure.include=*
+#management.endpoint.shutdown.enabled=true
+
+management.endpoints.web.expose=*
+management.endpoint.shutdown.enabled=true
+
+
